--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,10 +1,12 @@
 .statisticsContainer {
     max-width: 80%;
-    margin-top: 5vh;
+    margin: auto;
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 0.5rem;
+     
 }
 
 .title {
